...
                    .font(.title3)
                    .multilineTextAlignment(.center)

                    Button(action: {
                        dismiss()
                    }) {
                        Text("Continue")
                        Image(systemName: "chevron.forward")
                    }
                    .accessibilityIdentifier("button.continue-welcome")
                    .font(.headline)
                    .fontWeight(.bold)
                    .buttonStyle(.borderedProminent)
                    .padding(.top, 20)
                }
            }
...
