...
                    ToolbarItem(placement: .topBarLeading) {
                        Button {
                            showSettingsSheet = true
                        } label: {
                            Label("Settings", systemImage: "gearshape")
                        }
                        .accessibilityIdentifier("button.open-settings")
                    }
                    ToolbarItem(placement: .topBarTrailing) {
                        Button {
                            showInfotexts = true
                        } label: {
                            Label("Info", systemImage: "info.bubble")
...
