...
                        } else {
                            dismiss()
                        }
                    } label: {
                        Label("Close", systemImage: "xmark")
                    }
                    .accessibilityIdentifier("button.close-settings")
                }
            }
        }
        .accessibilityIdentifier("screen.settings")
    }
}
...
